# sapic

./: .cursorignore  .env.example  .env.sample  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENT.md  BUG_FIXES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  setup-hooks.sh  tsconfig.json  turbo.json  typedoc-rename-plugin.js  typedoc.json  typos.toml  vitest.config.ts  vitest.workspace.ts
.grit/: .gitignore  (+1 more)
crates/app/: Cargo.toml  build.rs
crates/app/contrib/: index.jsonnet
crates/app/src/: app.rs  builder.rs  command.rs  extension.rs  theme.rs  types.rs  windows.rs
crates/app/tests/: app__delete_workspace.rs  test__delete_workspace.rs
crates/base/: Cargo.toml  index.ts  package.json
crates/base/bindings/: primitives.ts  types.ts  types.zod.ts
crates/base/src/: errors.rs  lib.rs  other.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  lib.rs  subscription.rs  task.rs
crates/ipc/: Cargo.toml  index.ts  package.json
crates/ipc/bindings/: events.ts  events.zod.ts  operations.ts  operations.zod.ts  types.ts  types.zod.ts
crates/ipc/src/: contracts.rs  errors.rs  lib.rs
crates/main/: Cargo.toml
crates/main/src/: color_theme_ops.rs  environment.rs  environment_ops.rs  project.rs  resource.rs  window.rs  workspace.rs  workspace_ops.rs
crates/main/tests/: main__activate_environment.rs  main__archive_project.rs  main__create_environment.rs  main__create_project.rs  main__delete_environment.rs  main__delete_project.rs  main__describe_project.rs  main__export_project.rs  main__import_project.rs  main__list_project_resources.rs  main__list_projects.rs  main__stream_projects.rs  main__unarchive_project.rs  main__update_environment.rs  main__update_project.rs
crates/moss-activity-broadcaster/: Cargo.toml  constants.ts  index.ts  package.json
crates/moss-activity-broadcaster/bindings/: constants.ts  events.ts  events.zod.ts
crates/moss-activity-broadcaster/src/: handle.rs  lib.rs  models.rs
crates/moss-addon/: Cargo.toml
crates/moss-addon/src/: lib.rs  scanner.rs
crates/moss-api/: Cargo.toml  package.json
crates/moss-api/bindings/: types.ts  types.zod.ts
crates/moss-api/src/: contracts.rs  errors.rs  ext.rs  lib.rs  utils.rs
crates/moss-app/: Cargo.toml  build.rs  constants.ts  contrib.json  index.ts  package.json
crates/moss-app-delegate/: Cargo.toml
crates/moss-app-delegate/src/: lib.rs
crates/moss-app/bindings/: constants.ts  events.ts  events.zod.ts  operations.ts  operations.zod.ts  primitives.ts  primitives.zod.ts  types.ts  types.zod.ts
crates/moss-app/contrib/: index.jsonnet  mod.rs
crates/moss-app/src/: app.rs  builder.rs  command.rs  config.rs  configuration.rs  context.rs  extension.rs  language.rs  lib.rs  locale.rs  logging.rs  manager.rs  profile.rs  service.rs  service_pool.rs  services.rs  session.rs  state.rs  storage.rs  theme.rs  workspace.rs
crates/moss-app/tests/: app__add_account.rs  app__batch_delete_logs.rs  app__cancel_request.rs  app__close_workspace.rs  app__create_workspace.rs  app__delete_workspace.rs  app__list_logs.rs  app__open_workspace.rs  app__rename_workspace.rs  app__update_configuration.rs  app__update_profile.rs  log_service__batch_delete_logs.rs  log_service__list_logs.rs  workbench__close_workspace.rs  workbench__create_workspace.rs  workbench__delete_workspace.rs  workbench__open_workspace.rs  workbench__rename_workspace.rs
crates/moss-applib/: Cargo.toml
crates/moss-applib/src/: context.rs  ctx.rs  error.rs  errors.rs  lib.rs  markers.rs  providers.rs  subscription.rs  task.rs
crates/moss-asp/: Cargo.toml
crates/moss-asp/src/: lib.rs
crates/moss-bindingutils/: Cargo.toml  index.ts  package.json
crates/moss-bindingutils/bindings/: primitives.ts  primitives.zod.ts
crates/moss-bindingutils/const-export/: Cargo.toml
crates/moss-bindingutils/macro/: Cargo.toml
crates/moss-bindingutils/src/: lib.rs  primitives.rs
crates/moss-collection/: Cargo.toml  index.ts  package.json
crates/moss-collection/bindings/: collection.ts  events.ts  events.zod.ts  operations.ts  operations.zod.ts  primitives.ts  primitives.zod.ts  types.ts  types.zod.ts
crates/moss-collection/obsolete/: collection_create_entry__dir.rs  collection_create_entry__request.rs  collection_delete_entry__dir.rs  collection_stream_entries_by_prefixes.rs
crates/moss-collection/src/: adapters.rs  api.rs  builder.rs  collection.rs  collection_handle.rs  collection_manager.rs  collection_registry.rs  collection_service.rs  config.rs  constants.rs  context.rs  environment_provider.rs  git.rs  helpers.rs  indexer.rs  indexing.rs  kdl.rs  leased_slotmap.rs  lib.rs  manager.rs  manifest.rs  models.rs  ports.rs  request_handle.rs  sanitizer.rs  services.rs  storage.rs  tokens.rs  vcs.rs  worktree.rs  zip.rs
crates/moss-collection/tests/: collection__batch_create_entry.rs  collection__create_entry.rs  collection__create_request_dir_entry.rs  collection__create_request_entry.rs  collection__delete_entry.rs  collection__delete_request_dir_entry.rs  collection__stream_entries.rs  collection__update_entry.rs  collection__update_request_dir_entry.rs  collection_create_entry.rs  collection_create_entry__dir.rs  collection_create_entry__request.rs  collection_create_request_entry.rs  collection_delete_entry.rs  (+23 more)
crates/moss-common/: Cargo.toml  package.json
crates/moss-configuration/: Cargo.toml  package.json
crates/moss-contrib/: Cargo.toml
crates/moss-db/: Cargo.toml
crates/moss-desktop/: Cargo.toml
crates/moss-environment/: Cargo.toml  index.ts  package.json
crates/moss-environment-provider/: Cargo.toml
crates/moss-extension/: Cargo.toml  package.json
crates/moss-extension-points/: Cargo.toml
crates/moss-file/: Cargo.toml
crates/moss-fs/: Cargo.toml
crates/moss-git/: Cargo.toml  package.json
crates/moss-git-hosting-provider/: Cargo.toml  package.json
crates/moss-global-env/: Cargo.toml  package.json
crates/moss-hcl/: Cargo.toml
(+3729 files in other folders)
