[workspace]
resolver = "1"
members = [
    #
    # Library crates
    #
    "libs/joinerror",
    "libs/atomic-fs",
    #
    # Workspace crates
    #
    "crates/moss-applib",
    "crates/moss-git",
    "crates/moss-git-hosting-provider",
    "crates/moss-api",
    "crates/moss-text",
    "crates/moss-collection",
    "crates/moss-app",
    "crates/moss-applib",
    "crates/moss-db",
    "crates/moss-fs",
    "crates/moss-keyring",
    "crates/moss-vault",
    "crates/moss-workspace",
    "crates/moss-environment",
    "crates/moss-testutils",
    "crates/moss-common",
    "crates/moss-storage",
    "crates/moss-activity-indicator",
    "crates/moss-file",
    "crates/moss-hcl", 
    "crates/moss-bindingutils", 
    "crates/moss-wasm",
    "crates/moss-contentmodel",
    #
    # Apps
    #
    "view/desktop/bin",
    #
    # Tools
    #
    "tools/xtask",
]

[workspace.dependencies]
#
# Library crates
#
joinerror = { path = "libs/joinerror" }
#
# Workspace crates
#
moss_api = { path = "crates/moss-api" }
moss_text = { path = "crates/moss-text" }
moss_collection = { path = "crates/moss-collection" }
moss_db = { path = "crates/moss-db" }
moss_app = { path = "crates/moss-app" }
moss_applib = { path = "crates/moss-applib" }
moss_git = { path = "crates/moss-git" }
moss_git_hosting_provider = { path = "crates/moss-git-hosting-provider" }
moss_fs = { path = "crates/moss-fs" }
moss_keyring = { path = "crates/moss-keyring" }
moss_vault = { path = "crates/moss-vault" }
moss_workspace = { path = "crates/moss-workspace" }
moss_environment = { path = "crates/moss-environment" }
moss_common = { path = "crates/moss-common" }
moss_testutils = { path = "crates/moss-testutils" }
moss_storage = { path = "crates/moss-storage" }
moss_activity_indicator = { path = "crates/moss-activity-indicator" }
moss_file = { path = "crates/moss-file" }
moss_hcl = { path = "crates/moss-hcl" }
moss_bindingutils = { path = "crates/moss-bindingutils" }
moss_wasm = { path = "crates/moss-wasm" }
moss_contentmodel = { path = "crates/moss-contentmodel" }
atomic_fs = { path = "libs/atomic-fs" }

#
# External crates
#
async-stream = "0.3.6"
notify = "8.0"
redb = "2.6.0"
tauri = { version = "2.2.5", default-features = false }
rand = { version = "0.9.0", features = ["thread_rng"] }
serde = "1.0.217"
anyhow = "1.0.95"
arcstr = "1.2.0"
bstr = "1.11.3"
git2 = "0.20.0"
log = "0.4.25"
oauth2 = "5.0.0"
reqwest = "0.12.12"
serde_json = "1.0"
strum = "0.27.0"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = false }
ts-rs = "11.0.1"
thiserror = "2.0.11"
dashmap = "6.1.0"
async-trait = "0.1.86"
url = "2.5.4"
dotenv = "0.15.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
whoami = "1.5.2"
chrono = { version = "0.4.40", features = ["now"] }
webbrowser = "1.0.3"
zeroize = "1.7"
aes-gcm = "0.10.3"
argon2 = "0.5.1"
validator = "0.20.0"
futures = "0.3.31"
regex = { version = "1.11.1", default-features = false, features = [] }
smallvec = "1.15.0"
toml = "0.8"
toml_edit = "0.22"
nanoid = "0.4.0"
rustc-hash = "2.1.1"
derive_more = "2.0.1"
image = "0.25.6"
hcl-rs = "0.18.5"
indexmap = "2.9.0"
wasmtime = "34.0.2"
wasmtime-wasi = "34.0.0"
wasmtime-wasi-http = "34.0.1"
sha2 = "0.10.9"
jsonptr = "0.7.1"
json-patch = "4.0.0"
