[workspace]
resolver = "1"
members = [
    #
    # Library crates
    #
    "libs/joinerror",
    "libs/atomic-fs",
    "libs/static-json",
    #
    # Workspace crates
    #
    "crates/moss-applib",
    "crates/moss-app",
    "crates/moss-app-delegate",
    "crates/moss-git",
    "crates/moss-git-hosting-provider",
    "crates/moss-api",
    "crates/moss-text",
    "crates/moss-project",
    "crates/moss-db",
    "crates/moss-fs",
    "crates/moss-keyring",
    "crates/moss-vault",
    "crates/moss-workspace",
    "crates/moss-environment",
    "crates/moss-testutils",
    "crates/moss-common",
    "crates/moss-storage",
    "crates/moss-activity-broadcaster",
    "crates/moss-hcl", 
    "crates/moss-bindingutils", 
    "crates/moss-wasm",
    "crates/moss-edit",
    "crates/moss-logging",
    "crates/moss-user",
    "crates/moss-server-api",
    "crates/moss-id-macro",
    "crates/moss-extension",
    "crates/moss-extension-points", 
    "crates/moss-theme", 
    "crates/moss-configuration",
    "crates/moss-locale",
    #
    # Apps
    #
    "view/desktop/bin",
    #
    # Tools
    #
    "tools/xtask",
    "tools/cargo-new-ts",
]

[workspace.dependencies]
#
# Library crates
#
joinerror = { path = "libs/joinerror", features = ["anyhow", "tokio", "serde_json", "validator", "reqwest", "url", "git2"] }
atomic_fs = { path = "libs/atomic-fs" }
static_json = { path = "libs/static-json" }
#
# Workspace crates
#
moss_api = { path = "crates/moss-api" }
moss_text = { path = "crates/moss-text" }
moss_project = { path = "crates/moss-project" }
moss_db = { path = "crates/moss-db" }
moss_app = { path = "crates/moss-app" }
moss_applib = { path = "crates/moss-applib" }
moss_app_delegate = { path = "crates/moss-app-delegate" }
moss_git = { path = "crates/moss-git" }
moss_git_hosting_provider = { path = "crates/moss-git-hosting-provider" }
moss_fs = { path = "crates/moss-fs" }
moss_keyring = { path = "crates/moss-keyring" }
moss_vault = { path = "crates/moss-vault" }
moss_workspace = { path = "crates/moss-workspace" }
moss_environment = { path = "crates/moss-environment" }
moss_common = { path = "crates/moss-common" }
moss_testutils = { path = "crates/moss-testutils" }
moss_storage = { path = "crates/moss-storage" }
moss_activity_broadcaster = { path = "crates/moss-activity-broadcaster" }
moss_hcl = { path = "crates/moss-hcl" }
moss_bindingutils = { path = "crates/moss-bindingutils" }
moss_wasm = { path = "crates/moss-wasm" }
moss_edit = { path = "crates/moss-edit" }
moss_logging = { path = "crates/moss-logging" }
moss_id_macro = { path = "crates/moss-id-macro"}
moss_user = { path = "crates/moss-user" }
moss_server_api = { path = "crates/moss-server-api" }
moss_bootstrap = { path = "crates/moss-bootstrap" }
moss_extension = { path = "crates/moss-extension" }
moss_extension_points = { path = "crates/moss-extension-points" }
moss_theme = { path = "crates/moss-theme" }
moss_configuration = { path = "crates/moss-configuration" }
moss_locale = { path = "crates/moss-locale" }
#
# External crates
#
async-stream = "0.3.6"
notify = "8.0"
redb = "2.6.0"
tauri = { version = "2.2.5", default-features = false }
rand = { version = "0.9.0", default-features = false}
serde = "1.0.217"
anyhow = "1.0.95"
arcstr = "1.2.0"
bstr = "1.11.3"
git2 = "0.20.0"
log = "0.4.25"
oauth2 = "5.0.0"
reqwest = "0.12.12"
serde_json = "1.0"
strum = "0.27.0"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = false }
ts-rs = "11.0.1"
thiserror = "2.0.11"
dashmap = "6.1.0"
async-trait = "0.1.86"
url = "2.5.4"
dotenv = "0.15.0"
keyring = "3"
whoami = "1.5.2"
chrono = { version = "0.4.40", default-features = false }
webbrowser = "1.0.3"
zeroize = { version = "1.7" }
aes-gcm = "0.10.3"
argon2 = "0.5.1"
validator = "0.20.0"
futures = "0.3.31"
regex = { version = "1.11.1", default-features = false }
smallvec = "1.15.0"
toml_edit = "0.22"
nanoid = "0.4.0"
rustc-hash = "2.1.1"
derive_more = "2.0.1"
image = { version = "0.25.6", default-features = false }
hcl-rs = "0.18.5"
indexmap = "2.9.0"
wasmtime = "34.0.2"
wasmtime-wasi = "34.0.0"
wasmtime-wasi-http = "34.0.2"
sha2 = "0.10.9"
jsonptr = "0.7.1"
json-patch = "4.0.0"
urlencoding = "2.1.3"
tokio-util = "0.7.12"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = {version = "2.0.106"}
async_zip = {version = "0.0.18", default-features = false}
regorus = {version = "0.5.0", default-features = false}
inventory = "0.3.21"


[profile.release]
opt-level = 3 # Maximize performance
codegen-units = 1 # This gives better compiler optimization
lto = true # Link time optimization that improves runtime speed at the expense of linking time
panic = "abort" # Remove unwinding related code
strip = "symbols" # Remove debug symbols
