[workspace]
resolver = "1"
members = [
    #
    # Library crates
    #
    "libs/joinerror",
    "libs/atomic-fs",
    "libs/static-json",
    #
    # Internal crates
    #
    "crates/app",
    "crates/window",
    "crates/welcome",
    "crates/main",
    "crates/system",
    "crates/base", 
    "crates/platform",
    "crates/ipc",
    "crates/window2",
    "crates/runtime",
    "crates/core",

    "crates/moss-applib",
    "crates/moss-app-delegate",
    "crates/moss-git",
    "crates/moss-text",
    "crates/moss-project",
    "crates/moss-fs",
    "crates/moss-keyring",
    "crates/moss-vault",
    "crates/moss-workspace",
    "crates/moss-environment",
    "crates/moss-testutils",
    "crates/moss-common",
    "crates/moss-activity-broadcaster",
    "crates/moss-hcl", 
    "crates/moss-bindingutils", 
    "crates/moss-wasm",
    "crates/moss-edit",
    "crates/moss-logging",
    "crates/moss-id-macro",
    "crates/moss-extension-points", 
    "crates/moss-language",
    "crates/moss-storage2",
    #
    # Plugins
    #
    "plugins/shared_storage",
    "plugins/settings-storage",
    "plugins/url-parser",
    #
    # Apps
    #
    "view/desktop/bin",
    #
    # Tools
    #
    "tools/xtask",
    "tools/cargo-new-ts",
]

[workspace.dependencies]
#
# Library crates
#
joinerror = { path = "libs/joinerror", features = ["anyhow", "tokio", "serde_json", "validator", "reqwest", "url", "git2"] }
atomic_fs = { path = "libs/atomic-fs" }
static_json = { path = "libs/static-json" }
#
# Internal crates
#
sapic-app = { path = "crates/app", package = "app" }
sapic-system = { path = "crates/system", package = "system" }
sapic-welcome = { path = "crates/welcome", package = "welcome" }
sapic-runtime = { path = "crates/runtime", package = "runtime" }
sapic-main = { path = "crates/main", package = "main" }
sapic-window2 = { path = "crates/window2", package = "window2" }
sapic-base = { path = "crates/base", package = "base" }
sapic-platform = { path = "crates/platform", package = "platform" }
sapic-ipc = { path = "crates/ipc", package = "ipc" }
sapic-core = { path = "crates/core", package = "core" }

sapic-window = { path = "crates/window", package = "window" }



moss_text = { path = "crates/moss-text" }
moss_project = { path = "crates/moss-project" }
moss_applib = { path = "crates/moss-applib" }
moss_app_delegate = { path = "crates/moss-app-delegate" }
moss_git = { path = "crates/moss-git" }
moss_fs = { path = "crates/moss-fs" }
moss_keyring = { path = "crates/moss-keyring" }
moss_vault = { path = "crates/moss-vault" }
moss_workspace = { path = "crates/moss-workspace" }
moss_environment = { path = "crates/moss-environment" }
moss_common = { path = "crates/moss-common" }
moss_testutils = { path = "crates/moss-testutils" }
moss_activity_broadcaster = { path = "crates/moss-activity-broadcaster" }
moss_hcl = { path = "crates/moss-hcl" }
moss_bindingutils = { path = "crates/moss-bindingutils" }
moss_wasm = { path = "crates/moss-wasm" }
moss_edit = { path = "crates/moss-edit" }
moss_logging = { path = "crates/moss-logging" }
moss_id_macro = { path = "crates/moss-id-macro"}
moss_bootstrap = { path = "crates/moss-bootstrap" }
moss_extension_points = { path = "crates/moss-extension-points" }
moss_language = { path = "crates/moss-language" }
moss_storage2 = { path = "crates/moss-storage2" }
#
# Plugin crates
#
shared-storage = { path = "plugins/shared_storage" }
settings-storage = { path = "plugins/settings-storage" }
url-parser = { path = "plugins/url-parser" }
#
# External crates
#
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
async-stream = "0.3.6"
notify = "8.0"
tauri = { version = "2.2.5", default-features = false }
tauri-plugin = { version = "2.2.0", features = ["build"] }
rand = { version = "0.9.0", default-features = false}
serde = "1.0.217"
anyhow = "1.0.95"
arcstr = "1.2.0"
bstr = "1.11.3"
git2 = "0.20.0"
log = "0.4.25"
oauth2 = "5.0.0"
reqwest = "0.12.12"
serde_json = "1.0"
strum = "0.27.0"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = false }
ts-rs = "11.0.1"
thiserror = "2.0.11"
dashmap = "6.1.0"
async-trait = "0.1.86"
url = "2.5.4"
dotenvy = "0.15.7"
keyring = "3"
whoami = "1.5.2"
chrono = { version = "0.4.40", default-features = false }
webbrowser = "1.0.3"
zeroize = { version = "1.7" }
aes-gcm = "0.10.3"
argon2 = "0.5.1"
validator = "0.20.0"
futures = "0.3.31"
regex = { version = "1.11.1", default-features = false }
smallvec = "1.15.0"
toml_edit = "0.22"
nanoid = "0.4.0"
rustc-hash = "2.1.1"
derive_more = "2.0.1"
image = { version = "0.25.8", default-features = false }
hcl-rs = "0.18.5"
indexmap = "2.9.0"
wasmtime = "34.0.2"
wasmtime-wasi = "34.0.0"
wasmtime-wasi-http = "34.0.2"
sha2 = "0.10.9"
jsonptr = "0.7.1"
json-patch = "4.0.0"
urlencoding = "2.1.3"
tokio-util = "0.7.12"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = {version = "2.0.106"}
async_zip = {version = "0.0.18", default-features = false}
regorus = {version = "0.5.0", default-features = false}
inventory = "0.3.21"
arc-swap = "1.7.1"
pest = "2.8.3"
pest_derive = "2.8.3"


[profile.release]
opt-level = 3 # Maximize performance
codegen-units = 1 # This gives better compiler optimization
lto = true # Link time optimization that improves runtime speed at the expense of linking time
panic = "abort" # Remove unwinding related code
strip = "symbols" # Remove debug symbols
