[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/app.rs"

[build-dependencies]
serde_json.workspace = true

[dependencies]
sapic-runtime = { workspace = true }
sapic-system = { workspace = true }
sapic-welcome = { workspace = true }
sapic-main = { workspace = true }
sapic-window2 = { workspace = true, features = ["external"] }
sapic-ipc = { workspace = true }

sapic-window = { workspace = true }

moss_applib = { workspace = true }
moss_language = { workspace = true }
moss_user = { workspace = true }
moss_app_delegate = { workspace = true }
moss_fs = { workspace = true }
moss_extension = { workspace = true }
moss_keyring = { workspace = true }
moss_server_api = { workspace = true }
moss_text = { workspace = true }
moss_workspace = { workspace = true }
moss_common = { workspace = true }
moss_storage2 = { workspace = true }

tauri = { workspace = true }
tokio = { workspace = true }
rustc-hash = { workspace = true }
joinerror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
tracing.workspace = true
inventory.workspace = true

[dev-dependencies]

[features]
integration-tests = []
