[package]
name = "base"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_text.workspace = true

ts-rs.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
derive_more = { workspace = true, features = ["deref", "display"] }
joinerror.workspace = true

[features]
integration-tests = []
