[package]
name = "main"
version = "0.1.0"
edition = "2024"
description = "Main window controller for the application"

[lib]
path = "src/window.rs"

[dependencies]
sapic-core = { workspace = true }
sapic-base = { workspace = true }
sapic-system = { workspace = true }
sapic-window2 = { workspace = true }
sapic-ipc = { workspace = true }

sapic-window = { workspace = true }

moss_app_delegate = { workspace = true }
moss_server_api = { workspace = true }
moss_activity_broadcaster = { workspace = true }
moss_applib = { workspace = true }
moss_common = { workspace = true }
moss_project = { workspace = true }
moss_fs = { workspace = true }
moss_text = { workspace = true }
moss_workspace = { workspace = true }
moss_keyring = { workspace = true }

derive_more = { workspace = true, features = ["deref"] }
tauri = { workspace = true }
joinerror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[features]
integration-tests = []
