[package]
name = "moss_addon"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_fs.workspace = true
moss_app_delegate.workspace = true
moss_applib.workspace = true
moss_logging.workspace = true
moss_contrib.workspace = true

async-trait.workspace = true
tracing.workspace = true
joinerror.workspace = true
static_json.workspace = true
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
integration-tests = []
