[package]
name = "moss_api"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_common.workspace = true

tokio = { workspace = true, features = ["full"] }
ts-rs.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
