[package]
name = "moss_app"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_common.workspace = true
moss_fs.workspace = true
moss_applib.workspace = true
moss_tauri.workspace = true
moss_text.workspace = true
moss_workbench.workspace = true
moss_storage.workspace = true
moss_db.workspace = true

anyhow.workspace = true
fnv.workspace = true
tauri = { workspace = true, features = ["wry"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
parking_lot.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
serde.workspace = true
ts-rs.workspace = true
uuid.workspace = true
chrono.workspace = true
nanoid.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json", "chrono", "ansi"] }
tracing-appender.workspace = true

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
moss_testutils.workspace = true
