[package]
name = "moss_app"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_common.workspace = true
moss_fs.workspace = true
moss_applib.workspace = true
moss_api.workspace = true
moss_text.workspace = true
moss_workspace.workspace = true
moss_storage.workspace = true
moss_db.workspace = true
moss_activity_indicator.workspace = true
moss_environment.workspace = true
moss_git_hosting_provider.workspace = true
moss_keyring.workspace = true
moss_logging.workspace = true

joinerror.workspace = true
futures.workspace = true
anyhow.workspace = true
tauri = { workspace = true, features = ["wry"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
rustc-hash.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
ts-rs.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "json", "chrono", "ansi", "env-filter"] }
tracing-appender.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut", "from"] }
validator.workspace = true
async-trait.workspace = true
nanoid.workspace = true
reqwest = { workspace = true, features = ["json"] }
dotenv.workspace = true
oauth2 = { workspace = true, features = ["ureq"] }

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
moss_testutils.workspace = true
moss_applib = { workspace = true, features = ["test"] }

[features]
integration-tests = []
