[package]
name = "moss_applib"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sapic-core.workspace = true

tauri = { workspace = true, features = ["wry"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
rustc-hash.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
futures.workspace = true
dashmap.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio-util.workspace = true
joinerror.workspace = true
validator.workspace = true
moss_logging.workspace = true
tracing.workspace = true

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }

[features]
integration-tests = []
test = []
