[package]
name = "moss_bindingutils"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ts-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
moss_bindingutils_macros = { path = "macro" }

[features]
integration-tests = []
