[package]
name = "moss_collection"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_fs.workspace = true
moss_db.workspace = true
moss_activity_indicator.workspace = true
moss_common.workspace = true
moss_storage.workspace = true
moss_text.workspace = true
moss_file.workspace = true
moss_environment.workspace = true

anyhow.workspace = true
kdl.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
# miette = { workspace = true, features = ["fancy"] }
tokio = { workspace = true, features = ["sync"] }
ts-rs = { workspace = true, features = ["serde-json-impl", "uuid-impl"] }
serde_json.workspace = true
scraper.workspace = true
xml-rs.workspace = true
validator = { workspace = true, features = ["derive"] }
tauri.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
futures.workspace = true
notify.workspace = true
sweep-bptree.workspace = true
file-id.workspace = true
tokio-stream.workspace = true
toml.workspace = true
toml_edit.workspace = true
uuid = { workspace = true, features = ["serde"] }
petgraph.workspace = true

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
moss_testutils.workspace = true
