[package]
name = "moss_collection"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_fs.workspace = true
moss_db.workspace = true
moss_activity_indicator.workspace = true
moss_common.workspace = true
moss_storage.workspace = true
moss_text.workspace = true
moss_file.workspace = true
moss_environment.workspace = true

moss_applib.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
ts-rs = { workspace = true, features = ["serde-json-impl", "uuid-impl"] }
serde_json.workspace = true
validator = { workspace = true, features = ["derive"] }
tauri.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
futures.workspace = true
notify.workspace = true
tokio-stream.workspace = true
toml.workspace = true
toml_edit.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
moss_testutils.workspace = true
