[package]
name = "moss_configuration"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
moss_applib.workspace = true
moss_app_delegate.workspace = true
moss_text.workspace = true
moss_logging.workspace = true

joinerror.workspace = true
ts-rs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
inventory.workspace = true
tracing.workspace = true

[features]
integration-tests = []
