[package]
name = "moss_contrib"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_fs.workspace = true
moss_logging.workspace = true

tracing.workspace = true
joinerror.workspace = true
static_json.workspace = true
inventory.workspace = true
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
integration-tests = []
