[package]
name = "moss_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
redb.workspace = true
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
aes-gcm.workspace = true
rand.workspace = true
argon2.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
serde_json.workspace = true
moss_testutils.workspace = true