[package]
name = "moss_db"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sapic-core.workspace = true
moss_testutils.workspace = true
moss_applib.workspace = true
joinerror.workspace = true

anyhow.workspace = true
redb.workspace = true
serde = { workspace = true, features = ["derive"] }
aes-gcm.workspace = true
argon2.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[features]
integration-tests = []
