[package]
name = "moss_environment"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_common.workspace = true
moss_fs.workspace = true
moss_file.workspace = true
moss_storage.workspace = true

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ts-rs = { workspace = true, features = ["serde-json-impl"] }
nanoid.workspace = true
