[package]
name = "moss_environment"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_edit.workspace = true
moss_common.workspace = true
moss_fs.workspace = true
moss_file.workspace = true
moss_storage.workspace = true
moss_applib.workspace = true
moss_hcl.workspace = true
moss_text.workspace = true
moss_bindingutils.workspace = true
moss_db.workspace = true

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ts-rs = { workspace = true, features = ["serde-json-impl"] }
derive_more.workspace = true
nanoid.workspace = true
tauri.workspace = true
joinerror.workspace = true
indexmap.workspace = true
hcl-rs.workspace = true
tokio.workspace = true
json-patch.workspace = true

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
moss_testutils.workspace = true
moss_applib = { workspace = true, features = ["test"] }

[features]
integration-tests = []
