[package]
name = "moss_environment"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
moss_edit.workspace = true
moss_common.workspace = true
moss_fs.workspace = true
moss_storage2.workspace = true
moss_applib.workspace = true
moss_hcl.workspace = true
moss_text.workspace = true
moss_bindingutils.workspace = true
moss_id_macro.workspace = true
moss_logging.workspace = true
moss_app_delegate.workspace = true

anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ts-rs = { workspace = true, features = ["serde-json-impl"] }
derive_more.workspace = true
nanoid.workspace = true
tauri.workspace = true
joinerror.workspace = true
indexmap.workspace = true
hcl-rs.workspace = true
tokio.workspace = true
json-patch.workspace = true
tracing.workspace = true

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
moss_testutils.workspace = true
moss_applib = { workspace = true, features = ["test"] }

[features]
integration-tests = []
