[package]
name = "moss_extension_points"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sapic-system.workspace = true
sapic-runtime.workspace = true
sapic-base.workspace = true

moss_app_delegate.workspace = true
moss_applib.workspace = true
moss_logging.workspace = true
moss_extension.workspace = true
moss_fs.workspace = true
moss_project.workspace = true
moss_language.workspace = true

joinerror.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
inventory.workspace = true
tokio.workspace = true

[features]
integration-tests = []
