[package]
name = "moss_extension"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_fs.workspace = true
moss_app_delegate.workspace = true
moss_applib.workspace = true
moss_logging.workspace = true

joinerror.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
inventory.workspace = true
tracing.workspace = true
