[package]
name = "moss_file"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_fs.workspace = true
moss_common.workspace = true

toml_edit.workspace = true
toml.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
nanoid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true

[features]
integration-tests = []
