[package]
name = "moss_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_common.workspace = true

async-trait.workspace = true
anyhow.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["full"] }
notify.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
