[package]
name = "moss_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
moss_applib.workspace = true
moss_text.workspace = true
joinerror.workspace = true

async-trait.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
notify.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
tauri.workspace = true
derive_more.workspace = true
thiserror.workspace = true

[features]
integration-tests = []
